--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-
     <title>Actutu</title>
 </head>
 <body>
@@ -14,7 +13,7 @@
     <header></header>
     <nav>
         <ul class="nav">
-            <li>Acceuil</li>
+            <li>Accueil</li>
             <li>Rechercher</li>
             <li>A propos</li>
         </ul>
@@ -29,8 +28,8 @@
             <img src="logo.svg" alt="logo">
             <h1>Actutu</h1><br>
             <p>Toute l'actualité du livre</p>
-            <form class="searchbar" action="">
-                <input type="texte" placeholder="Rechercher un livre">
+            <form class="searchbar" action="GET">
+                <input type="text" placeholder="Rechercher un livre">
                 <button id ="search" type="submit">Go</button>
             </form>
         </div>
@@ -68,7 +67,7 @@
 
         <div class="listitems">
             <div class="card-product">
-                <img src="card1.svg">
+                <img src="card1.svg" alt="bookcov">
                 <div class="card-product-info">
                     <h2>Learning ECMAScript6</h2>
                     <p>Narayan Prusty</p>
@@ -77,7 +76,7 @@
                 <p>27,42€</p>
             </div>
             <div class="card-product">
-                <img src="card1.svg">
+                <img src="card1.svg" alt="bookcov">
                 <div class="card-product-info">
                     <h2>Learning ECMAScript6</h2>
                     <p>Narayan Prusty</p>
@@ -86,7 +85,7 @@
                 <p>27,42€</p>
             </div>
             <div class="card-product">
-                <img src="card1.svg">
+                <img src="card1.svg" alt="bookcov">
                 <div class="card-product-info">
                     <h2>Learning ECMAScript6</h2>
                     <p>Narayan Prusty</p>
@@ -95,7 +94,7 @@
                 <p>27,42€</p>
             </div>
             <div class="card-product">
-                <img src="card1.svg">
+                <img src="card1.svg" alt="bookcov">
                 <div class="card-product-info">
                     <h2>Learning ECMAScript6</h2>
                     <p>Narayan Prusty</p>
@@ -104,7 +103,7 @@
                 <p>27,42€</p>
             </div>
             <div class="card-product">
-                <img src="card1.svg">
+                <img src="card1.svg" alt="bookcov">
                 <div class="card-product-info">
                     <h2>Learning ECMAScript6</h2>
                     <p>Narayan Prusty</p>
