hover book addedd

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <div class="card-product-info">
                     <h2>Learning ECMAScript6</h2>
                     <p>Narayan Prusty</p>
-                    <p>Learn all the new ES6 features and be amongst the most prominent JavaScript developers who can write efficient JS programs as per the latest standards! About This Book Learn a powerful approach to writing object-oriented JavaScript code using ES6 Create and use ES6 modules to learn to write smart, modularized JavaScript code Ag Font Roboto Weight 400 Style normal Size 14px Line Height 16,41px 222222 /* Learn all the new ES6 features and be amongst the most prominent JavaScript developers who can write efficient JS programs as per the latest standards! About This Book Learn a powerful approach to writing object-oriented JavaScript code using ES6 Create and use ES6 modules to learn to write smart, modularized JavaScript code</p>
+                    <p>Learn all the new ES6 features and be amongst the most prominent JavaScript developers who can write efficient JS programs as per the latest standards! About This Book Learn a powerful approach to writing object-oriented JavaScript code using ES6 Create and use ES6 modules to learn to write smart, modularized JavaScript cod</p>
                 </div>
                 <p>27,42€</p>
             </div>
@@ -80,7 +80,7 @@
                 <div class="card-product-info">
                     <h2>Learning ECMAScript6</h2>
                     <p>Narayan Prusty</p>
-                    <p>Learn all the new ES6 features and be amongst the most prominent JavaScript developers who can write efficient JS programs as per the latest standards! About This Book Learn a powerful approach to writing object-oriented JavaScript code using ES6 Create and use ES6 modules to learn to write smart, modularized JavaScript code Ag Font Roboto Weight 400 Style normal Size 14px Line Height 16,41px 222222 /* Learn all the new ES6 features and be amongst the most prominent JavaScript developers who can write efficient JS programs as per the latest standards! About This Book Learn a powerful approach to writing object-oriented JavaScript code using ES6 Create and use ES6 modules to learn to write smart, modularized JavaScript code</p>
+                    <p>Learn all the new ES6 features and be amongst the most prominent JavaScript developers who can write efficient JS programs as per the latest standards! About This Book Learn a powerful approach to writing object-oriented JavaScript code using ES6 Create and use ES6 modules to learn to write smart, modularized JavaScript cod</p>
                 </div>
                 <p>27,42€</p>
             </div>
@@ -89,7 +89,7 @@
                 <div class="card-product-info">
                     <h2>Learning ECMAScript6</h2>
                     <p>Narayan Prusty</p>
-                    <p>Learn all the new ES6 features and be amongst the most prominent JavaScript developers who can write efficient JS programs as per the latest standards! About This Book Learn a powerful approach to writing object-oriented JavaScript code using ES6 Create and use ES6 modules to learn to write smart, modularized JavaScript code Ag Font Roboto Weight 400 Style normal Size 14px Line Height 16,41px 222222 /* Learn all the new ES6 features and be amongst the most prominent JavaScript developers who can write efficient JS programs as per the latest standards! About This Book Learn a powerful approach to writing object-oriented JavaScript code using ES6 Create and use ES6 modules to learn to write smart, modularized JavaScript code</p>
+                    <p>Learn all the new ES6 features and be amongst the most prominent JavaScript developers who can write efficient JS programs as per the latest standards! About This Book Learn a powerful approach to writing object-oriented JavaScript code using ES6 Create and use ES6 modules to learn to write smart, modularized JavaScript cod</p>
                 </div>
                 <p>27,42€</p>
             </div>
@@ -98,7 +98,7 @@
                 <div class="card-product-info">
                     <h2>Learning ECMAScript6</h2>
                     <p>Narayan Prusty</p>
-                    <p>Learn all the new ES6 features and be amongst the most prominent JavaScript developers who can write efficient JS programs as per the latest standards! About This Book Learn a powerful approach to writing object-oriented JavaScript code using ES6 Create and use ES6 modules to learn to write smart, modularized JavaScript code Ag Font Roboto Weight 400 Style normal Size 14px Line Height 16,41px 222222 /* Learn all the new ES6 features and be amongst the most prominent JavaScript developers who can write efficient JS programs as per the latest standards! About This Book Learn a powerful approach to writing object-oriented JavaScript code using ES6 Create and use ES6 modules to learn to write smart, modularized JavaScript code</p>
+                    <p>Learn all the new ES6 features and be amongst the most prominent JavaScript developers who can write efficient JS programs as per the latest standards! About This Book Learn a powerful approach to writing object-oriented JavaScript code using ES6 Create and use ES6 modules to learn to write smart, modularized JavaScript cod</p>
                 </div>
                 <p>27,42€</p>
             </div>
@@ -107,7 +107,7 @@
                 <div class="card-product-info">
                     <h2>Learning ECMAScript6</h2>
                     <p>Narayan Prusty</p>
-                    <p>Learn all the new ES6 features and be amongst the most prominent JavaScript developers who can write efficient JS programs as per the latest standards! About This Book Learn a powerful approach to writing object-oriented JavaScript code using ES6 Create and use ES6 modules to learn to write smart, modularized JavaScript code Ag Font Roboto Weight 400 Style normal Size 14px Line Height 16,41px 222222 /* Learn all the new ES6 features and be amongst the most prominent JavaScript developers who can write efficient JS programs as per the latest standards! About This Book Learn a powerful approach to writing object-oriented JavaScript code using ES6 Create and use ES6 modules to learn to write smart, modularized JavaScript code</p>
+                    <p>Learn all the new ES6 features and be amongst the most prominent JavaScript developers who can write efficient JS programs as per the latest standards! About This Book Learn a powerful approach to writing object-oriented JavaScript code using ES6 Create and use ES6 modules to learn to write smart, modularized JavaScript cod</p>
                 </div>
                 <p>27,42€</p>
             </div>
