some responsive added

--- a/index.html
+++ b/index.html
@@ -28,13 +28,17 @@
 
         <main>
             <div class="banner">
-                <img src="logo.svg" alt="logo">
-                <h1>Actutu</h1><br>
-                <p>Toute l'actualité du livre</p>
-                <form class="searchbar" id="searchbar" action="GET">
-                    <input type="text" placeholder="Rechercher un livre">
-                    <button id ="search" type="submit">Go</button>
-                </form>
+                <div class="logosite">
+                    <img src="logo.svg" alt="logo">
+                    <h1>Actutu</h1><br>
+                    <p>Toute l'actualité du livre</p>
+                </div>
+                <div class="formbar">
+                    <form class="searchbar" id="searchbar" action="GET">
+                        <input type="text" placeholder="Rechercher un livre">
+                        <button id ="search" type="submit">Go</button>
+                    </form>
+                </div>
             </div>
                 
             
