--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     
-    <script src="main.js"></script>
+    
     <div class="container">
         <header></header>
         <nav>
@@ -46,13 +46,13 @@
                 <img src="book.svg" alt="bookicon">
                 <h2>Recommandations</h2>
             </div>
-            <div class="cards">
+            <div id="cards" >
                 <div class="card">
                     <img src="card1.svg" alt="book">
                     <p>Learning ECMAScript6</p>
                     <p>Narayan Prusty</p>
                     <p>27,42€</p>
-                    </div>
+                </div>
                 <div class="card">
                     <img src="card1.svg" alt="book">
                     <p>Learning ECMAScript6</p>
@@ -72,7 +72,7 @@
                 <h2>Les livres à moins de 20€</h2>
             </div>
 
-            <div class="listitems">
+            <div id="listitems">
                 <div class="card-product">
                     <img src="card1.svg" alt="bookcov">
                     <div class="card-product-info">
@@ -159,5 +159,6 @@
             </div>
         </footer>
     </div>
+    <script src="main.js"></script>
 </body>
 </html>
