--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                     <p>Toute l'actualité du livre</p>
                 </div>
                 <div class="formbar">
-                    <form class="searchbar" id="searchbar" action="GET">
-                        <input type="text" placeholder="Rechercher un livre">
+                    <form class="searchbar" id="searchbar" action="index.html">
+                        <input id="name" type="text" placeholder="Rechercher un livre">
                         <button id ="search" type="submit">Go</button>
                     </form>
                 </div>
@@ -120,8 +120,6 @@
                 </div>
             </div>
 
-
-
         </main>
 
         <footer>
@@ -132,7 +130,7 @@
                     <span></span>
                     <span></span>
                 </div>
-            <h3>Toutes les ressources du site</h3>
+                <h3>Toutes les ressources du site</h3>
             </div>
             <div class="footermenu">
                 <ul class="firstmenu">
