burger menu WIP

--- a/index.html
+++ b/index.html
@@ -16,14 +16,18 @@
         <header></header>
         <nav>
             <ul class="nav">
+                <img class="burgerimg" src="assets/brgr.png">
                 <li>Accueil</li>
                 <li>Rechercher</li>
                 <li>A propos</li>
+                <li>Se connecter</li>
+                <li>S'inscrire</li>
             </ul>
             <div class="boutton">
                 <button class="loggin">Se connecter</button>
                 <button class="subscribe">S'inscrire</button>
             </div>
+           
         </nav>
 
         <main>
@@ -124,12 +128,7 @@
 
         <footer>
             <div class="logofooter">
-                <div class="bulles">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
+                <img src="bubble.svg" alt="logo">
                 <h3>Toutes les ressources du site</h3>
             </div>
             <div class="footermenu">
