Bburger menu responsive done

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     
     <div class="container">
         <header></header>
+        <button id="buttonmenu" onclick="burgermenu()" > <i class="fas fa-arrow-down"></i></button>
         <nav>
             <ul class="nav">
-                <img class="burgerimg" src="assets/brgr.png">
                 <li>Accueil</li>
                 <li>Rechercher</li>
                 <li>A propos</li>
