--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+
 <!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="./main.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <title>Actutu</title>
@@ -15,6 +16,9 @@
     <div class="container">
         <header></header>
         <button id="buttonmenu" onclick="burgermenu()" > <i class="fas fa-arrow-down"></i></button>
+        <button id="buttonmenu" onclick="burgermenu()" > <i class="fas fa-arrow-down"></i></button>
+        <button id="buttonmenu" onclick="burgermenu()" > <i class="fas fa-arrow-down"></i></button>
+
         <nav>
             <ul class="nav">
                 <li>Accueil</li>
